Closed
Bug 1424782
Opened 7 years ago
Closed 7 years ago
Intermittent GECKO(2118) | Assertion failure: false, at /builds/worker/workspace/build/src/layout/painting/nsDisplayList.cpp:4953
Categories
(Core :: Graphics: WebRender, defect, P1)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox59 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: kats)
References
Details
(Keywords: intermittent-failure, Whiteboard: [wr-mvp])
Attachments
(1 file)
Filed by: kgupta [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=151190382&repo=try
https://queue.taskcluster.net/v1/task/EfZShHepR0uWawbZPVknkA/runs/0/artifacts/public/logs/live_backing.log
On a mochitest-plain try run I got this. nsDisplayEventReceiver::CreateWebRenderCommands is getting called, which should never happen.
Assignee | ||
Comment 1•7 years ago
|
||
This can probably be fixed by expanding the guard at [1] to also check aBuilder->IsForEventDelivery() like all the other places that use nsDisplayEventReceiver.
[1] https://searchfox.org/mozilla-central/rev/281d99b3d342b71d0653b872345761372d38f5c1/layout/xul/nsSplitterFrame.cpp#374
Blocks: 1334189
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → bugmail
Updated•7 years ago
|
Status: NEW → ASSIGNED
Priority: P5 → P1
Whiteboard: [wr-reserve]
Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8936374 [details]
Bug 1424782 - Ensure nsDisplayEventReceiver is only created when building the display list for hit-testing.
https://reviewboard.mozilla.org/r/207098/#review212994
Attachment #8936374 -
Flags: review?(matt.woodrow) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/90aad43cbab3
Ensure nsDisplayEventReceiver is only created when building the display list for hit-testing. r=mattwoodrow
Comment 5•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•7 years ago
|
Whiteboard: [wr-reserve] → [wr-mvp]
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/776901623d60
Follow-up to remove overzealous assertion I added. r=me
Comment 7•7 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•