Bug 1424782 - Ensure nsDisplayEventReceiver is only created when building the display list for hit-testing. r=mattwoodrow

MozReview-Commit-ID: 1c14siwpzYB

--HG--
extra : rebase_source : d7c651b967252a043f4e2296b5d9ece07e4e22cb